# duospaced-mkdocs-material

./: .dockerignore  .env  .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  build-debug.sh  build.sh  docker-compose.debug.yml  docker-compose.yml  mkdocs.yml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy-docs.yml  semantic-release.yml
.trunk/: trunk.yaml
docs/: index.md
docs/stylesheets/: default_styles.css  fonts.css
material/templates/partials/: copyright.html
